src/objects/c2g__Worker__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworker</customHelpPage>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcessStatus__c</fullName>
        <formula>TEXT( c2g__BatchProcess__r.c2g__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Background Worker</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Background Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>